--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
 body {
-    background-color: lightgray;
-    }
+    background-color: hsl(212, 45%, 89%);
+}
+
+div.flex-container {
+    display: flex;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+}
