--- a/index.css
+++ b/index.css
@@ -12,11 +12,12 @@ div.flex-container {
 }
 
 img {
-    width: 100%;
+    width: 90%;
     height: 100%;
     border-radius: 12px;
     object-fit: cover;
     text-align: center;
+    margin: 15px;
 }
 
 #container {
@@ -49,7 +50,7 @@ div.img {
 
 /* Style div elements that have class equal to name */
 .name {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 700;
     margin: 15px;
     text-align: center;
@@ -62,4 +63,5 @@ p {
     font-weight: 400;
     margin: 15px;
     text-align: center;
+    color: hsl(220, 15%, 55%);
 }
